--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.13",
     "mongoose": "^5.3.16",
+    "multer": "^1.4.1",
+    "sharp": "^0.22.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
