--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +17,12 @@
     "mongodb": "^3.1.13",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
+    "nodemailer": "^6.0.0",
     "sharp": "^0.22.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "env-cmd": "^8.0.2",
     "nodemon": "^1.18.10"
   }
 }
